# clem

./: .dockerignore  CLAUDE.md  Dockerfile  LICENSE  README.md  clem.py  docker-compose.yaml  justfile  main.py  pyproject.toml
src/clem/: __init__.py  discord.py
