[project]
dependencies = [
  "discord-py>=2.4.0",
  "loguru>=0.7.2",
  "meilisearch>=0.32.0",
  "tenacity>=9.0.0",
  "langfuse>=2.59.1",
  "sentry-sdk>=2.20.0",
  "openai-agents>=0.0.16",
  "httpx>=0.27.0",
]
description = "Add your description here"
name = "clem"
readme = "README.md"
requires-python = ">=3.12"
version = "0.1.0"

[project.scripts]
clem = "clem:main"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.ruff]
line-length = 79
